@@ -5,6 +5,8 @@
 2. Set timeout of 20 seconds for browsing commands, 5 seconds for control
    commands, and 30 seconds for MAI commands.
 3. Better positioning of song details in portrait mobile now-playing.
+4. When clicking 'i' button in mobile layout, ingore clicks on play/pause
+   button (which replaces 'i') for 1/4 second.
 
 0.7.1
 -----
